# claude-logiq

./: .gitignore  CLAUDE.md  README.md  nginxplus_json_logs.txt  pyproject.toml  sample-bug-logs.txt
.claude/: ruff_format_hook.sh  settings.json
.claude/agents/: cli-expert.md  log-structure-analyzer.md  python-developer.md  qa-validator.md  root-cause-finder.md  sql-query-generator.md
.claude/commands/: architecture-overview.md  bug-analyze-and-test.md  create-proof-of-concept.md  create-unit-test.md  develop-feature.md  feature-spec-creation.md  fix-bug.md  generate-c4-model.md  review-pull-request.md
.claude/skills/brainstorming/: SKILL.md
.claude/skills/code-refactoring/: SKILL.md
.claude/skills/code-writing/: SKILL.md
bugreport/: bugreport-1.md
bugreports/: issue-1.md
bugreports/issue-1/: report-addition.md  report.md  root-cause-analysis.md  summary.md
examples/: root-cause-finder-125-word-limit.md  root-cause-finder-without-word-limit.md
src/claude_logiq/: __init__.py  log_parser.py  output_formatter.py  time_aggregator.py
tests/: __init__.py  test_decimal_response_time_bug.py  test_integration.py  test_log_parser.py  test_output_formatter.py  test_response_time_rounding_bug.py  test_rounding_bug.py  test_time_aggregator.py
